--- a/style.css
+++ b/style.css
@@ -42,14 +42,16 @@ ul{
     max-width: 80%;
     margin: 0 auto;
     margin-bottom: 20px;
-    gap: 50px;
+    gap: 0px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 .camera{
     background-image: url("./images/Circle\ design.svg");
+    background-repeat: no-repeat;
     padding: 30px;
+
 }
 .camera-img{
     width: 100%;
@@ -58,11 +60,13 @@ ul{
     text-align: left;
     width: 582px;
     height: 270px;
+    
 }
 .camera-title{
  font-weight: bold;
  font-size: 3.5rem;
  margin-bottom: 30px;
+ background-color: ye\;
 
 }
 /* button-style */
@@ -76,4 +80,17 @@ ul{
     margin-top: 30px;
     border: none;
     text-align: center;
+}
+/* alibaba-section */
+.alibaba-head{
+    width: 70%;
+    height: 50px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(7,1fr);
+    border-top: 2px solid rgba(0, 0, 0, 0.2); 
+    border-bottom: 2px solid rgba(0, 0, 0, 0.2);
+    padding: 30px 50px;
+
+
 }
