--- a/style.css
+++ b/style.css
@@ -12,6 +12,26 @@ body{
     font-size: 1rem;
     color: #3a3a3a;
 }
+.card-title{
+    font-size: 2rem;
+    font-weight: bold;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    
+}
+.dollar{
+    margin-bottom: 20px;
+    font-size: 1.25rem;
+    color: #000000;
+    
+}
+.des{
+    padding-bottom: 10px;
+    font-weight: bold;
+    font-size: 0.9rem;
+    color: #787885;
+    
+}
 /* nav-style */
 .navber{
     max-width:80%;
@@ -93,4 +113,33 @@ ul{
     padding: 30px 50px;
 
 
+}
+.popu{
+    margin-top: 100px;
+    margin-bottom: 50px;
+    font-weight: 600;
+    font-size: 2rem;
+    color: #3A3A3A;
+}
+/* card-design */
+.main-div{
+    max-width: 70%;
+    margin: 0 auto;
+    text-align: center;
+}
+.cards{
+  max-width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  gap: 45px;
+  
+}
+.card{
+
+    padding: 17px 15px ;
+    text-align: left;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.16);
+}
+.card .card-img{
+    width: 100%;
 }
