--- a/style.css
+++ b/style.css
@@ -143,3 +143,45 @@ ul{
 .card .card-img{
     width: 100%;
 }
+.interval{
+    max-width: 70%;
+    text-align: right;
+    margin: 0 auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    color: #E02C6D;
+    font-weight: 800;
+}
+.last-div{
+    display: flex;
+    justify-content: space-between;
+    max-width: 80%;
+    margin: 0 auto;
+    gap: 96px;
+}
+.mechanic>img{
+    width: 100%;
+}
+.fea{
+    
+    height: 224px;
+}
+.fea-title{
+    font-size: 2.25rem;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-weight: 700;
+}
+.fea-des{
+    color: #6C6C6C;
+    font-size: 1rem;
+    margin-bottom: 40px;
+}
+.fea-btn{
+    padding: 15px 40px;
+    background-color: #E02C6D;
+    color: white;
+    font-weight: 800;
+    border: none;
+   
+}
