--- a/style.css
+++ b/style.css
@@ -244,6 +244,7 @@ ul{
     .camera-text{
         width: 90%;
         text-align: center;
+        margin-bottom: 100px;
     }
     .camera-title{
         font-size: 2rem;
@@ -256,6 +257,7 @@ ul{
     .primary-btn{
         padding: 20px 50px;
         border-radius: 30px;
+    
     }
     .alibaba-head{
      margin-top: 50px;
@@ -285,5 +287,8 @@ ul{
     display: flex;
     flex-direction: column-reverse;
   }
-  
+  .fea{
+    margin-bottom: 100px;
+    text-align: center;
+  }
 }
